fix file structure

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet">
     <title>Test</title>
 </head>
 <body>
 <h1>Works</h1>
+<script src="script.js"></script>
 </body>
 </html>
