add sync script

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
-    <title>Test</title>
+    <title>Напонимания</title>
 </head>
 <body>
-<h1>Works</h1>
+<div id="main" class="container">
+    <div id="title-container" class="container">
+        <p id="title">¯\_(ツ)_/¯</p>
+    </div>
+    <div id="date-container" class="container">
+        date
+    </div>
+    <div id="note-container" class="container">
+        <textarea id="note" class="container"></textarea>
+    </div>
+    <div id="buttons-container" class="container">
+        <button id="add-note">Add</button>
+    </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
