--- a/public/game/index.html
+++ b/public/game/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
 <div id="main" class="container">
-    <div id="title-container" class="container">
-        <p id="title">¯\_(ツ)_/¯</p>
-    </div>
     <div id="date-container" class="container">
         date
     </div>
@@ -17,9 +14,9 @@
         <textarea id="note" class="container"></textarea>
     </div>
     <div id="buttons-container" class="container">
-        <button id="add-note">Add</button>
+        <button id="add-note" disabled>Add</button>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="js/index.js" type="module"></script>
 </body>
 </html>
