--- a/public/game/index.html
+++ b/public/game/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
+    <link href="/js/pickerjs/picker.min.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Напонимания</title>
 </head>
 <body>
+<div id="overlay-spinner" hidden>
+    <i class="fas fa-sync fa-spin"></i>
+</div>
 <div id="main" class="container">
     <div id="date-container" class="container">
-        date
+        <div id="date-picker"></div>
+        <div id="time-picker"></div>
     </div>
     <div id="note-container" class="container">
-        <textarea id="note" class="container"></textarea>
+        <div id="note" contenteditable data-text="Enter text here..."></div>
     </div>
     <div id="buttons-container" class="container">
         <button id="add-note" disabled>Add</button>
