add show selected data

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -23,6 +23,7 @@
                 <label for="show-time-picker" class="crossed">Время</label>
                 <div><input id="show-time-picker" type="checkbox"/></div>
             </div>
+            <div id="date-selected" class="date-control"></div>
         </div>
         <div id="date">
             <div id="date-picker" class="hidden"></div>
